crates/stef-compiler/tests/inputs/invalid/resolve_kind_mismatch.stef
struct Sample {
    value: OTHER @1,
}

const OTHER: u32 = 1;
